# QtHelper

./: CMakeLists.txt  Main.qml  main.cpp
Model/: DisplayMonitorInfo.cpp  DisplayMonitorInfo.h  HomeModel.qml  LogHandler.cpp  LogHandler.h  MonitorControl.cpp  MonitorControl.h  MyTestModel.cpp  MyTestModel.h
View/: Button.qml  DisplayMonitorInfoView.qml  HomeView.qml  ListView.qml  MonitorControlView.qml  MyTestView.qml  RootView.qml  TextEdit.qml
